buildscript {
  repositories {
    mavenCentral()
    maven { url 'https://s01.oss.sonatype.org' }
    gradlePluginPortal()
    mavenLocal()
    google()
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
    maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots/' }
  }
  dependencies {


  }
}

allprojects {
  apply plugin: 'eclipse'
  apply plugin: 'idea'

  // This allows you to "Build and run using IntelliJ IDEA", an option in IDEA's Settings.
  idea {
    module {
      outputDir file('build/classes/java/main')
      testOutputDir file('build/classes/java/test')
    }
  }
}

configure(subprojects) {
  apply plugin: 'java-library'

  def assetsFolder = rootProject.layout.projectDirectory.dir('assets').asFile
  def assetsFile = new File(assetsFolder, 'assets.txt')

  java {
    toolchain {
      languageVersion = JavaLanguageVersion.of(25)
    }
  }

  tasks.withType(JavaCompile).configureEach {
    options.incremental = true
  }

  tasks.named('compileJava') {
    doLast {
      assetsFile.delete()

      assetsFolder.eachFileRecurse { file ->
        def relativePath = assetsFolder.toPath().relativize(file.toPath()).toString().replace(File.separatorChar, '/' as char)
        assetsFile.append(relativePath + "\n")
      }
    }
  }
}

subprojects {
  version = '1.0.0'
  ext.appName = 'OreForge'
  repositories {
    mavenCentral()
    maven { url 'https://s01.oss.sonatype.org' }
    // You may want to remove the following line if you have errors downloading dependencies.
    mavenLocal()
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
    maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots/' }
    maven { url 'https://jitpack.io' }
  }
  dependencies {
    testImplementation platform('org.junit:junit-bom:6.1.3')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
  }

  test {
    useJUnitPlatform()
    outputs.upToDateWhen { false }
    outputs.cacheIf { false }
  }

}



eclipse.project.name = 'OreForge' + '-parent'
